"make test" in the spec file.  Tested on RHEL4, 5, and 6 and in chroot
jails and VNFS images.
----------------------------------------------------------------------
Tue Sep  4 13:01:10 2012                        Michael Jennings (mej)

Initial support for the nVidia HealthMon tool for checking the status
of nVidia CUDA GPU devices.  More information can be found with the
Tesla Deployment Kit version 3 (currently in RC status).
----------------------------------------------------------------------
Tue Sep  4 17:50:00 2012                        Michael Jennings (mej)

Add check for blacklisted processes.
----------------------------------------------------------------------
Wed Sep  5 16:39:59 2012                        Michael Jennings (mej)

New checks for filesystem size/used/free limits based on "df" output.
Refactored check_fs_mount() to only read /proc/mounts once and
populate central array set (just like all the other modules).
Refactored unit tests accordingly.
----------------------------------------------------------------------
Thu Sep  6 09:57:41 2012                        Michael Jennings (mej)

Added support for detached mode.  Runs all checks in the background,
saves state to filesystem and checks it on the next run.
----------------------------------------------------------------------
Fri Sep  7 14:14:41 2012                        Michael Jennings (mej)

Added unit tests for new disk space checks.  Tweaked detached mode to
detach sooner.  Fixed some faulty logic.
----------------------------------------------------------------------
Fri Sep  7 14:52:49 2012                        Michael Jennings (mej)

A couple minor bugfixes/cleanups.  This is now officially 1.2 beta.
----------------------------------------------------------------------
Wed Oct  3 16:09:05 2012                        Michael Jennings (mej)

Finalized 1.2 release.
----------------------------------------------------------------------