@@ -5,6 +5,7 @@ SUBDIRS = bench test
 
 helperdir = $(libexecdir)/nhc
 confdir = $(sysconfdir)/nhc
+logrotatedir = $(sysconfdir)/logrotate.d
 
 dist_sbin_SCRIPTS = nhc
 dist_conf_DATA = nhc.conf
@@ -17,7 +18,14 @@ nobase_dist_conf_DATA = scripts/common.nhc scripts/ww_fs.nhc	\
 MAINTAINERCLEANFILES = Makefile.in aclocal.m4 configure install-sh missing
 DISTCLEANFILES = 
 CLEANFILES = 
-EXTRA_DIST = COPYING ChangeLog LICENSE autogen.sh nhc-test.conf warewulf-nhc.spec
+EXTRA_DIST = COPYING ChangeLog LICENSE autogen.sh nhc.logrotate nhc-test.conf warewulf-nhc.spec
+
+install-data-local:
+	$(MKDIR_P) '$(DESTDIR)$(logrotatedir)'
+	$(INSTALL_DATA) $(srcdir)/nhc.logrotate '$(DESTDIR)$(logrotatedir)/nhc'
+
+uninstall-local:
+	-( cd '$(DESTDIR)$(logrotatedir)' && rm -f nhc )
 
 test:
 	$(MAKE) -C test test
