@@ -56,6 +56,7 @@ test "$RPM_BUILD_ROOT" != "/" && %{__rm} -rf $RPM_BUILD_ROOT
 %defattr(-, root, root)
 %dir %{_sysconfdir}/%{sname}/
 %config(noreplace) %{_sysconfdir}/%{sname}/%{sname}.conf
+%config(noreplace) %{_sysconfdir}/logrotate.d/%{sname}
 %{_sbindir}/%{sname}
 %{nhc_script_dir}/
 %{nhc_helper_dir}/
